list_test = executable('list_test', 'list_test.c',
  dependencies: libtribble_dep,
)

slist_test = executable('slist_test', 'slist_test.c',
  dependencies: libtribble_dep,
)

vector_test = executable('vector_test', 'vector_test.c',
  dependencies: libtribble_dep,
)

ht_test = executable('ht_test', 'ht_test.c',
  dependencies: libtribble_dep,
)

test('List test', list_test)
test('SList test', slist_test)
test('Vector test', vector_test)
test('HashTable test', ht_test)
